--- a/flights/templates/flights/base.html
+++ b/flights/templates/flights/base.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!DOCTYPE html>
 
 <html lang="en">
@@ -5,6 +6,7 @@
   <meta charset="utf-8">
 
   <title> {% block title %}{% endblock %}</title>
+  <link rel = "stylesheet" href ="{% static 'flights/styles.css' %}" />
 </head>
 
 <body>
