--- a/flights/templates/flights/flight.html
+++ b/flights/templates/flights/flight.html
@@ -2,7 +2,7 @@
 {% extends "flights/base.html"%}
 
 {% block title %}
-  <title>Flights id</title>
+  Flights id
 {%endblock%}
   
 {% block body%}
@@ -11,6 +11,7 @@
     <ul>
         <li>Origin: {{flight.origin}}</li>
         <li>Destination: {{flight.destination}}</li>
+        <li>Valid: {{flight.is_valid_flight}}</li>
     </ul>
 
     <h2>Passengers</h2>
@@ -40,3 +41,5 @@
     {%endif%}
     <a href="{% url 'index' %}">Back to full listing</a>
 {%endblock%}
+
+
